2004-02-16  Andrew Cagney  <cagney@redhat.com>
	* gdbint.texinfo (Coding): Mention -Wunused-function.

--- a/gdb/doc/gdbint.texinfo
+++ b/gdb/doc/gdbint.texinfo
@@ -38,7 +38,7 @@ Free Documentation License''.
 @page
 @tex
 \def\$#1${{#1}}  % Kluge: collect RCS revision info without $...$
-\xdef\manvers{\$Revision: 1.186 $}  % For use in headers, footers too
+\xdef\manvers{\$Revision: 1.187 $}  % For use in headers, footers too
 {\parskip=0pt
 \hfill Cygnus Solutions\par
 \hfill \manvers\par
@@ -5148,6 +5148,8 @@ switch (sched)
     break;
   @}
 @end smallexample
+
+@item -Wunused-function
 @end table
 
 @emph{Pragmatics: Due to the way that @value{GDBN} is implemented most
