--- a/gdb/doc/gdbint.texinfo
+++ b/gdb/doc/gdbint.texinfo
@@ -38,7 +38,7 @@ Free Documentation License''.
 @page
 @tex
 \def\$#1${{#1}}  % Kluge: collect RCS revision info without $...$
-\xdef\manvers{\$Revision: 1.194 $}  % For use in headers, footers too
+\xdef\manvers{\$Revision: 1.195 $}  % For use in headers, footers too
 {\parskip=0pt
 \hfill Cygnus Solutions\par
 \hfill \manvers\par
@@ -3057,7 +3057,7 @@ This method has been replaced by @code{push_dummy_code}
 @item DEPRECATED_SIZEOF_CALL_DUMMY_WORDS
 @findex DEPRECATED_SIZEOF_CALL_DUMMY_WORDS
 The size of @code{DEPRECATED_CALL_DUMMY_WORDS}.  This must return a
-positive value.  See also @code{DEPRECATED_CALL_DUMMY_LENGTH}.
+positive value.
 
 This method has been replaced by @code{push_dummy_code}
 (@pxref{push_dummy_code}).
