--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,52 @@
+2004-04-05  Martin Hunt  <hunt@redhat.com>
+
+	* library/session.tcl: Make hostname and portname 
+	session-dependent. Add gdb_bg_num (the color
+	scheme number) as a per-session variable.
+	
+	* library/prefs.tcl (pref_read): If color schemes are in use,
+	set colors based on the current scheme.
+	(pref_save): Add "bg" section.
+	(pref_set_defaults): Define new variable gdb/use_color_schemes
+	and define 16 default background colors.
+
+	* library/managedwin.itb (ManagedWin::window_name): Append
+	window "instance" string to window name.
+	(ManagedWin::window_instance): Set window instance string.
+
+	* library/debugwin.itb: Add a reconfig method to restore
+	unique black textbackground, overriding color scheme.
+
+	* library/csprefs.itb:
+	* library/csprefs.ith: New files. Implement color scheme
+	preferences.
+	
+	* library/util.tcl (set_bg_colors): New function.
+	(r_setcolors): New function.
+	
+	* library/regwin.itb (_prefs_changed): Deleted.
+	(reconfig): New function.  Updates tkTable color tags
+	if color scheme changes.
+	* library/regwin.ith: Update to reflect above changes.
+	
+	* library/srcbar.itcl (create_pref_menu): Add pulldown
+	menus for "Edit Color Schemes..." and "Use Color Schemes".
+	(reconfig): Fix up menu items for color schemes.
+	
+	* library/globalpref.itb (_init_var): Add 
+	gdb/use_color_schemes to variable list.
+	(_build_win): Add a checkbutton to enable/disable
+	color schemes.
+	
+	* library/gdbmenubar.itcl (menubar_add_cascade): Add a class 
+	argument so cascade menus can be managed by class too.
+
+	* library/interface.tcl (gdbtk_tcl_fputs): Check for 
+	existence of gdbtk_state(console).  Stops annoying error 
+	messages.
+	(gdbtk_tcl_fputs_error): Ditto.
+	(gdbtk_tcl_fputs_log): Ditto.	
+
 2004-03-29  Martin Hunt  <hunt@redhat.com>
 
 	* generic/gdbtk-register.c (map_arg_registers): If a specific
